--- a/web/index.html
+++ b/web/index.html
@@ -45,6 +45,8 @@
   
   
   
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -53,9 +55,8 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #42a5f5;
-      background-image: url("splash/img/light-background.png");
-      background-size: 100% 100%;
+      background-color: #FFFFFF;
+          background-size: 100% 100%;
     }
 
     .center {
@@ -103,13 +104,6 @@
       bottom: 0;
       right: 0;
     }
-
-    @media (prefers-color-scheme: dark) {
-      body {
-        background-color: #000000;
-        background-image: url("splash/img/dark-background.png");
-      }
-    }
   </style>
   <script id="splash-screen-script">
     function removeSplashFromWeb() {
@@ -120,6 +114,11 @@
   </script>
 </head>
 <body>
+  <picture id="splash">
+      <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x" media="(prefers-color-scheme: light)">
+      <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
+      <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
+  </picture>
   
   
   
